# Environmental-Monitoring-Device

./: Env-Mon-Dev-PCB-5.kicad_pcb  README.md
Hardware/: Env-Mon-Dev-Schematic-5.kicad_sch
Source/: CMakeLists.txt  DataCleaner.cpp  DataCleaner.h  JSONReader.cpp  JSONReader.h  MQTTPublisher.cpp  MQTTPublisher.h  Makefile  SCD41_Reading.cpp  SCD41_Reading.h  SCD4x.cpp  SCD4x.h  SCD4xReading.h  SDCardWriter.cpp  SDCardWriter.h  config.h  main.cpp
Source/config/: config.example.json
